--- a/app/page.module.css
+++ b/app/page.module.css
@@ -5,6 +5,10 @@
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
+  min-width: 100%;
+}
+.main>div {
+  min-width: 100%;
 }
 
 .description {
